commit last verse

--- a/poem.rmd
+++ b/poem.rmd
@@ -47,3 +47,20 @@ After the day was done—
 
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
+In a garden where the daisies bloom,     
+Beneath the sun, there’s a gentle room.     
+Butterflies dance on a warm spring breeze,    
+Whispers of laughter in the rustling leaves.        
+
+A little rabbit hops with glee,       
+Chasing shadows beneath the tree.       
+A ladybug lands on a flower’s face,      
+While busy bees hum with sweet embrace.      
+
+Clouds drift softly, cotton candy white,     
+As fireflies twinkle in the fading light.     
+The stars peek out as day turns to night,     
+Filling the world with a magical sight.     
+
+With dreams of wonder and joy to share,     
+Every moment holds love, everywhere.          
